Revise README with new game mechanics and features
Updated README to reflect new features and mechanics, including class abilities and dynamic UI updates.